# openface_ros

./: CMakeLists.txt  README.md  package.xml
msg/: FaceDetection.msg
src/: face_recognition.cpp  openface_node.py
src/face_client/: face_client.py
srv/: DetectFace.srv  LearnFace.srv
test/: openface_dummy_node.py  test_learn_detect.py
