<?xml version="1.0"?>
<package>
  <name>openface_ros</name>
  <version>0.0.0</version>
  <description>The openface_ros package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>sensor_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>usb_cam</run_depend>
  <build_depend>usb_cam</build_depend>

</package>
